--- a/styles/shared-styles.scss
+++ b/styles/shared-styles.scss
@@ -22,7 +22,9 @@
 }
 
 #nprogress .peg {
-  box-shadow: 0 0 0.625rem #ed017f, 0 0 0.313rem #ed017f !important;
+  box-shadow:
+    0 0 0.625rem #ed017f,
+    0 0 0.313rem #ed017f !important;
 }
 
 #nprogress .spinner-icon {
