🔥feat: added font family for header & body texts

--- a/styles/globals/_base.scss
+++ b/styles/globals/_base.scss
@@ -5,6 +5,7 @@
 html,
 body {
   font-family: $global-font-family;
+  font-optical-sizing: auto;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -17,6 +18,15 @@ body {
   color: $body-font-color;
   font-size: $body-font-size;
   text-rendering: optimizeLegibility;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $header-font-family;
 }
 
 h1,
