--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&display=swap");
+
 // Globals
 $global-font-size: 100%;
-$global-font-family: "Mulish", sans-serif;
+$global-font-family: "Open Sans", sans-serif;
+$header-font-family: "Roboto Slab", serif;
 
 // Body styles
 $body-font-size: $global-font-size;
