🔥feat: updated signup page

--- a/components/auth/SignUp/signup.module.scss
+++ b/components/auth/SignUp/signup.module.scss
@@ -44,6 +44,10 @@
         margin-top: to-rem(20);
       }
     }
+    .loginBtn {
+      margin: 0 auto;
+      width: fit-content;
+    }
   }
 
   .termsAndConditions {
